# indicator-bluetooth

./: Makefile.am  configure.ac
data/: Makefile.am  com.canonical.indicator.bluetooth  indicator-bluetooth.conf.in
debian/: changelog  control  copyright  watch
po/: af.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  frp.po  ga.po  gd.po  gl.po  he.po  hi.po  hr.po  (+61 more)
src/: Makefile.am  bluez.vala  indicator-bluetooth-service.vala  phone.vala
